--- a/layout/admin.phtml
+++ b/layout/admin.phtml
@@ -2,7 +2,7 @@ poopedmypants
 
 <?php
 
-echo $this->menu->render($this, $menu, []);
+echo $this->component('menu')->render($this, $menu, []);
 
 echo $this->content;
 
