--- a/view/index/index.phtml
+++ b/view/index/index.phtml
@@ -12,3 +12,5 @@ foreach($pages as $page) {
 	echo $this->html->tag('hr');
 	echo $this->html->a('#', [], '#' . $page->id());
 }
+
+#$page->delete();
