--- a/view/index/index.phtml
+++ b/view/index/index.phtml
@@ -12,7 +12,7 @@ foreach($pages as $page) {
 	echo $this->html->tag('hr');
 	echo $this->html->a($this->url('page', ['action' => 'read', 'id' => (string)$page->id()]), [], $page->id());
 	echo ' | ';
-	echo $this->html->a($this->url('page', ['action' => 'remove', 'id' => (string)$page->id()]), ['class' => 'button'], 'Delete');
+	echo $this->html->a($this->url('page', ['action' => 'dispose', 'id' => (string)$page->id()]), ['class' => 'button'], 'Delete');
 }
 
 #$page->delete();
