--- a/view/admin/index.phtml
+++ b/view/admin/index.phtml
@@ -1,3 +1,67 @@
+<hr>
+<h1>List</h1>
+
+<form>
+	<label>Type</label>
+	<select>
+		<option value="" selected>All content</option>
+		<option value="post">Posts</option>
+		<option value="product">Products</option>
+	</select>
+
+	<label>Parent</label>
+	<select><option>None</option></select>
+
+	<label>Recursive</label>
+	<input type="checkbox">
+	<br>
+
+	<input type="text" placeholder="Filter, type name, tag or other property here">
+</form>
+<table>
+	<thead>
+		<tr>
+			<th>#</th>
+			<th>Type</th>
+			<th>Name</th>
+			<th>Title</th>
+			<th>Parent</th>
+			<th>Tags</th>
+			<th>Layout</th>
+			<th>Created</th>
+			<th>Modified</th>
+			<th>Publised</th>
+			<th>Actions</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><a href="#aasdfasdf">3435</a></td>
+			<td><a href="#aasdfasdf">Product</a></td>
+			<td><a href="#aasdfasdf">Test-1324</a></td>
+			<td><a href="#aasdfasdf">Test 1324</a></td>
+			<td><a href="#aasdfasdf">Products</a></td>
+			<td><a href="#aasdfasdf">stuff</a> <a href="#aasdfasdf">crap</a></td>
+			<td><a href="#aasdfasdf">Default</a></td>
+			<td><a href="#aasdfasdf">140101 12:00</a></td>
+			<td><a href="#aasdfasdf">140101 12:00</a></td>
+			<td><a href="#aasdfasdf">140101 12:00</a></td>
+			<td><a href="#aasdfasdf">Edit</a> <a href="#aasdfasdf">Copy</a> <a href="#aasdfasdf">Delete</a></td>
+		</tr>
+	</tbody>
+</table>
+
+<hr>
+<h1>Edit</h1>
+<pre>
+Name
+Title
+Type [convert]
+Parent: (category)
+Content: (contents)
+</pre>
+
+<hr>
 <pre>
 
 
