--- a/view/post/edit.phtml
+++ b/view/post/edit.phtml
@@ -11,9 +11,11 @@ echo $this->html->open('form', ['method' => 'post', 'action' => $this->url('post
     echo '<br>';
     echo $this->html->text('data[title]', ['label' => 'Title'], (string)$model->title);
     echo '<br>';
-    echo $this->html->textarea('data[content][description]', ['label' => 'Description'], $model->content ? (string)$model->content->description : '');
-    echo '<br>';
-    echo $this->html->text('data[content][class]', ['label' => 'Class'], $model->content ? $model->content->className() : \hikari\cms\model\Page::className());
+    if($model->has('description')) {
+        echo $this->html->textarea('data[description]', ['label' => 'Description'], $model->description);
+        echo '<br>';
+    }
+    echo $this->html->text('data[class]', ['label' => 'Class'], $model->class ? (string)$model->class : $model->className());
     echo '<br>';
     echo $this->html->tag('button', [], $this->html->tag('i', ['class' => 'fa fa-fw fa-plus']) . ' ' . ucfirst($this->controller->action->id));
 echo $this->html->open('close');
